Output of LKH process redirected. Input / LKH directories added